tests/snapshots/rust/syntax_error_after/response.txt
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `is`
 --> <stdin>:2:6
  |
2 | this is not valid rust
  |      ^^ expected one of 8 possible tokens

